syntax = "proto3";

package proto;

service Blockchain {
    rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
    rpc GetBlockchain(GetBlockchainRequest) returns (GetBlockchainResponse) {}
}

enum Datatype {
    TEXT = 0;
    TRANSACTION = 1;
}

message AddBlockRequest {
    string data = 1;
    Datatype datatype = 2;
}

message AddBlockResponse {
    string hash =1;
}

message Block {
    string hash = 1;
    string prevBlockHash = 2;
    string data = 3;
    int64 timestamp = 4;
    Datatype datatype = 5;

}
message GetBlockchainRequest {}

message GetBlockchainResponse{
    repeated Block blocks = 1; 
}
